terraform/modules/msk/main.tf
variable "cluster_name" { type = string }
variable "kafka_version" { type = string; default = "3.5.1" }
variable "broker_instance_type" { type = string; default = "kafka.m5.large" }
variable "broker_count" { type = number; default = 3 }
variable "vpc_id" { type = string }
variable "subnet_ids" { type = list(string) }
variable "allowed_cidr_blocks" { type = list(string) }
variable "tags" { type = map(string); default = {} }

resource "aws_security_group" "msk" {
  name_prefix = "${var.cluster_name}-msk-"
  vpc_id      = var.vpc_id
  ingress { from_port = 9092; to_port = 9092; protocol = "tcp"; cidr_blocks = var.allowed_cidr_blocks }
  ingress { from_port = 9094; to_port = 9094; protocol = "tcp"; cidr_blocks = var.allowed_cidr_blocks }
  egress  { from_port = 0;    to_port = 0;    protocol = "-1";  cidr_blocks = ["0.0.0.0/0"] }
  tags = merge(var.tags, { Name = "${var.cluster_name}-msk" })
}

resource "aws_msk_configuration" "main" {
  name           = "${var.cluster_name}-config"
  kafka_versions = [var.kafka_version]
  server_properties = <<-PROPS
    auto.create.topics.enable=false
    default.replication.factor=3
    min.insync.replicas=2
    num.partitions=6
    log.retention.hours=168
    compression.type=lz4
  PROPS
}

resource "aws_msk_cluster" "main" {
  cluster_name           = var.cluster_name
  kafka_version          = var.kafka_version
  number_of_broker_nodes = var.broker_count
  configuration_info { arn = aws_msk_configuration.main.arn; revision = aws_msk_configuration.main.latest_revision }
  broker_node_group_info {
    instance_type  = var.broker_instance_type
    client_subnets = var.subnet_ids
    security_groups = [aws_security_group.msk.id]
    storage_info { ebs_storage_info { volume_size = 100 } }
  }
  encryption_info { encryption_in_transit { client_broker = "TLS_PLAINTEXT"; in_cluster = true } }
  open_monitoring { prometheus { jmx_exporter { enabled_in_broker = true }; node_exporter { enabled_in_broker = true } } }
  tags = var.tags
}

output "bootstrap_brokers" { value = aws_msk_cluster.main.bootstrap_brokers }
output "cluster_arn"       { value = aws_msk_cluster.main.arn }
